# assistant-bot

./: .env(example)  Dockerfile  Makefile  Procfile  README.md  entrypoint.sh  pyproject.toml  setup.cfg
bots/: bot_logging.py  dialogflow.py  telegram_bot.py  vkontakte_bot.py
bots/intents/: english.json  russian.json
