[tool.poetry]
name = "assistant-bot"
version = "0.1.0"
description = ""
authors = ["Artem Nechai <lenikol95@mail.ru>"]
packages = [
  { include = "bots" },
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
python-telegram-bot = "^13.11"
google-cloud-dialogflow = "^2.13.0"
vk-api = "^11.9.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
isort = "^5.10.1"
wemake-python-styleguide = "^0.16.1"

[tool.poetry.scripts]
tg = "bots.telegram_bot:main"
vk = "bots.vkontakte_bot:main"
teach-agent = "bots.dialogflow:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
